--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 <body>
 
 <div class="container">
-    <span>EOS Factory</span>
+    <h1>Welcome to EOS Factory</h1>
+    <p>EOS Factory is a framework for compiling, testing and deploying EOS smart-contracts, similar to Ethereum's <a href='http://truffleframework.com/'>Truffle Framework</a>.</p>
+    <p>It's composed of two layers:</p>
+    <ul>
+        <li>C++ interface for interacting with an EOS node (similar to block.one's cleos)</li>
+        <li>Python interface which is a convenient human-oriented wrapper around the above C++ interface</li>
+    </ul>
+    <p>Using Python will allow us to build <a href='http://eosfactory/docs/'>interactive tutorials</a> for EOS smart-contracts</p>
+
 </div>
 
 </body>
