--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li>C++ interface for interacting with an EOS node (similar to block.one's cleos)</li>
         <li>Python interface which is a convenient human-oriented wrapper around the above C++ interface</li>
     </ul>
-    <p>Using Python will allow us to build <a href='http://eosfactory/docs/'>interactive tutorials</a> for EOS smart-contracts</p>
+    <p>Using Python will allow us to build <a href='http://eosfactory.io/docs/'>interactive tutorials</a> for EOS smart-contracts</p>
 
 </div>
 
