--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="container">
     <h1>Welcome to EOS Factory</h1>
-    <p>EOS Factory is a framework for compiling, testing and deploying EOS smart-contracts, similar to Ethereum's <a href='http://truffleframework.com/'>Truffle Framework</a>.</p>
+    <p>EOS Factory is a smart-contract development framework, made by <a href='https://tokenika.io'>Tokenika</a>, for compiling, testing and deploying EOS smart-contracts, similar to Ethereum's <a href='http://truffleframework.com/'>Truffle Framework</a>.</p>
     <p>It's composed of two layers:</p>
     <ul>
         <li>C++ interface for interacting with an EOS node (similar to block.one's cleos)</li>
