--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <div class="container">
     <h1>Welcome to EOS Factory</h1>
-    <p><a href='https://github.com/tokenika/eosfactory'>EOS Factory</a> is a smart-contract development framework, made by <a href='https://tokenika.io'>Tokenika</a>, for compiling, testing and deploying EOS smart-contracts, similar to Ethereum's <a href='http://truffleframework.com/'>Truffle Framework</a>.</p>
+    <p><a href='https://github.com/tokenika/eosfactory'>EOS Factory</a> is a smart-contract development framework, made by <a href='https://tokenika.io'>Tokenika</a>for compiling, testing and deploying EOS smart-contracts.</p>
+    <p>It's going to have a similar functionality to Ethereum's <a href='http://truffleframework.com/'>Truffle Framework</a>.</p>
     <p>It will be composed of two layers:</p>
     <ul>
         <li>C++ interface for interacting with an EOS node (similar to block.one's cleos)</li>
