--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
 <div class="container">
     <h1>Welcome to EOS Factory</h1>
-    <p><a href='https://github.com/tokenika/eosfactory'>EOS Factory</a> is a smart-contract development framework, made by <a href='https://tokenika.io'>Tokenika</a>for compiling, testing and deploying EOS smart-contracts.</p>
+    <p><a href='https://github.com/tokenika/eosfactory'>EOS Factory</a> is a smart-contract development framework, made by <a href='https://tokenika.io'>Tokenika</a>for compiling, testing and deploying <a href='https://eos.io/'>EOS</a> smart-contracts.</p>
     <p>It's going to have a similar functionality to Ethereum's <a href='http://truffleframework.com/'>Truffle Framework</a>.</p>
     <p>It will be composed of two layers:</p>
     <ul>
-        <li>C++ interface for interacting with an EOS node (similar to block.one's cleos)</li>
-        <li>Python interface which is a convenient human-oriented wrapper around the above C++ interface</li>
+        <li>C++ bridge connected to an EOS node running a private testnet</li>
+        <li>Python wrapper acting as a convenient human-oriented interface</li>
     </ul>
     <p>Using Python will allow us to build <a href='http://eosfactory.io/docs/'>interactive tutorials</a> for EOS smart-contracts.</p>
     <p>EOS Factory is still under development. We plan to release it before June 2018.</p>
