--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>Welcome to EOS Factory</h1>
     <p><a href='https://github.com/tokenika/eosfactory'>EOS Factory</a> is a smart-contract development framework, made by <a href='https://tokenika.io'>Tokenika</a> for compiling, testing and deploying <a href='https://eos.io/'>EOS</a> smart-contracts.</p>
     <p>It's going to have a similar functionality to Ethereum's <a href='http://truffleframework.com/'>Truffle Framework</a>.</p>
-    <p>It will be composed of two layers:</p>
+    <p>It's composed of two layers:</p>
     <ul>
         <li>C++ bridge connected to an EOS node running a private testnet</li>
         <li>Python wrapper acting as a convenient human-oriented interface</li>
