--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <div class="container">
-    <h1>Welcome to EOS Factory</h1>
+    <h1>Welcome to eosfactory.io</h1>
     <p><a href='https://github.com/tokenika/eosfactory'>EOS Factory</a> is a smart-contract development framework, made by <a href='https://tokenika.io'>Tokenika</a> for compiling, testing and deploying <a href='https://eos.io/'>EOS</a> smart-contracts.</p>
     <p>It's going to have a similar functionality to Ethereum's <a href='http://truffleframework.com/'>Truffle Framework</a>.</p>
     <p>It's composed of two layers:</p>
