--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="container">
     <h1>Welcome to EOSfactory.io</h1>
-    <p><a href='https://github.com/tokenika/eosfactory'>EOSfactory.io</a> is a smart-contract development framework, made by <a href='https://tokenika.io'>Tokenika</a> for compiling, testing and deploying <a href='https://eos.io/'>EOS</a> smart-contracts.</p>
+    <p><a href='https://github.com/tokenika/eosfactory'>EOSfactory.io</a> is a smart-contract development framework, created by <a href='https://tokenika.io'>Tokenika</a>, for compiling, testing and deploying <a href='https://eos.io/'>EOS</a> smart-contracts.</p>
     <p>It's going to have a similar functionality to Ethereum's <a href='http://truffleframework.com/'>Truffle Framework</a>.</p>
     <p>It's composed of two layers:</p>
     <ul>
