--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>Welcome to EOSfactory.io</h1>
     <p><a href='https://github.com/tokenika/eosfactory'>EOSfactory.io</a> is a smart-contract development framework, created by <a href='https://tokenika.io'>Tokenika</a>.</p>
     <p>It's going to have a similar functionality to Ethereum's <a href='http://truffleframework.com/'>Truffle Framework</a>.</p>
-    <p>Using a single command-line interface you'll be able to compile, unit-test and deploy <a href='https://eos.io/'>EOS</a> smart-contracts.</p>
+    <p>Using a single command-line interface you'll be able to create a private testnet and then compile, unit-test and deploy <a href='https://eos.io/'>EOS</a> smart-contracts.</p>
     <p>It's composed of two layers:</p>
     <ul>
         <li>C++ bridge connected to an EOS node running a private testnet</li>
