--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li>Python wrapper acting as a convenient human-oriented interface</li>
     </ul>
     <p>Using Python will allow us to build <a href='http://eosfactory.io/docs/'>interactive tutorials</a> for EOS smart-contracts.</p>
+    <p>Also, we make sure everything we do is fully compatible with Windows - our toolset will enable you to run an EOS node and interact with it on any operating system, including Windows.</p>
     <p>EOS Factory is still under development. We plan to release it before June 2018.</p>
 </div>
 
